--- a/qwiz/templates/qwiz.html
+++ b/qwiz/templates/qwiz.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<h1>Your Qwiz</title>
-		<form method="POST" action="/">
+		<form method="POST" action="/qwiz/new">
 			<input name="question_text" id="id_new_question" placeholder="Enter a quiz question"/>
 			{% csrf_token %}
 		</form>
